css/style3.css
/* GENERAL */

:root {
  --clr-main-heading: #6ba576;
  --clr-secondary-heading: #6ba576;
}

body,
figure {
  margin: 0;
}

img[alt="cloud-img"],
main img {
  width: 10em;
}

h1 {
  color: var(--clr-main-heading);
}

h2 {
  color: var(--clr-secondary-heading);
}

/* TOP CONTAINER */

#top-container {
  background: rgb(223, 251, 255);
  background: linear-gradient(
    180deg,
    rgba(223, 251, 255, 1) 0%,
    rgba(255, 255, 255, 1) 50%
  );
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

#top-container h1 {
  margin: 0;
  font-family: "Clicker Script", cursive;
  font-weight: 500;
  font-size: 4.5rem;
  margin-bottom: 10px;
  position: -webkit-sticky;
  position: sticky;
  top: 0.5em;
  word-spacing: 10px;
}

#top-container .big-letter {
  font-size: 5.5rem;
}

#top-container h2 {
  margin: 0;
  font-family: "Montserrat", sans-serif;
  font-size: 1.2em;
  font-weight: 600;
}

#top-container .headings-container {
  margin: 0;
  text-align: center;
  order: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0.5em;
  transform: translateY(-1px);
  margin-top: 20vh;
  margin-bottom: 15vh;
}

/* ANIMATION AND SOLVE THE PROBLEM WHEN THEY REACH THE RIGHT DISPLAY */

#top-container .cloud1 {
  position: absolute;
}

#top-container .cloud2 {
  position: absolute;
}

#top-container .cloud3 {
  position: absolute;
}

#top-container .cloud4 {
  position: absolute;
}

#top-container .mountain-sm {
  order: 2;
  max-width: 50em;
  position: absolute;
  left: 50%;
  bottom: 0;
  transform: translate3d(-50%, 0, 1px);
}

#top-container .mountain-lg {
  display: none;
}

@media (max-width: 375px) {
  #top-container .headings-container {
    margin-top: 15vh;
    margin-bottom: 10vh;
  }

  #top-container h1 {
    font-size: 3rem;
  }

  #top-container .big-letter {
    font-size: 4rem;
  }

  #top-container h2 {
    font-size: 0.8rem;
  }
}

@media (max-width: 300px) {
  #top-container h1 {
    font-size: 3rem;
  }

  #top-container .big-letter {
    font-size: 3.5rem;
  }

  #top-container h2 {
    font-size: 0.8rem;
  }

  #top-container .headings-container {
    margin-top: 10vh;
    margin-bottom: 10vh;
  }
}

@media (min-width: 500px) {
  #top-container .mountain-lg {
    display: inline;
    order: 2;
    max-width: 37em;
    position: absolute;
    left: 50%;
    bottom: 0;
    transform: translate3d(-50%, 0, 1px);
  }

  #top-container .mountain-sm {
    display: none;
  }

  #top-container h1 {
    font-size: 5rem;
  }

  #top-container .big-letter {
    font-size: 6rem;
  }

  #top-container h2 {
    font-size: 1.2em;
  }

  #top-container .headings-container {
    margin-top: 10vh;
  }
}

@media (min-width: 768px) {
  #top-container {
    background: rgb(223, 251, 255);
    background: linear-gradient(
      180deg,
      rgba(223, 251, 255, 1) 0%,
      rgba(255, 255, 255, 1) 70%
    );
    min-height: 100vh;
    display: flex;
    flex-direction: column;
  }

  #top-container .mountain-lg {
    display: inline;
    order: 2;
    position: absolute;
    left: 50%;
    bottom: 0;
    transform: translate3d(-50%, 0, 1px);
  }

  #top-container h1 {
    font-size: 6rem;
  }

  #top-container .big-letter {
    font-size: 7.1004rem;
  }

  #top-container h2 {
    font-size: 1.3rem;
  }

  #top-container .headings-container {
    margin-top: 15vh;
    margin-bottom: 0;
  }
}

@media (min-width: 992px) {
  #top-container .mountain-lg {
    display: inline;
    order: 2;
    position: absolute;
    left: 50%;
    bottom: 0;
    transform: translate3d(-50%, 0, 1px);
  }

  #top-container h1 {
    font-size: clamp(6rem, 6.5vw, 6.5rem);
  }

  #top-container .big-letter {
    font-size: clamp(7.1004rem, 9.0248vw, 9.0248rem);
  }

  #top-container h2 {
    font-size: clamp(1.3rem, 1.5vw, 1.5rem);
  }
}

@media (min-width: 1200px) {
  #top-container .mountain-lg {
    max-width: 45em;
  }
}

@media (min-width: 1921px) {
  #top-container .mountain-lg {
    max-width: calc(45vw + 2rem);
  }

  #top-container h1 {
    font-size: calc(3vw + 3rem);
  }

  #top-container .big-letter {
    font-size: calc(3vw + 5rem);
  }

  #top-container h2 {
    font-size: calc(1vw + 0.3rem);
  }
}

@media (max-height: 500px) {
  #top-container {
    background: rgb(223, 251, 255);
    background: linear-gradient(
      180deg,
      rgba(223, 251, 255, 1) 0%,
      rgba(255, 255, 255, 1) 50%
    );
    min-height: 200vh;
    display: flex;
    flex-direction: column;
  }

  #top-container .mountain-lg {
    display: none;
  }

  #top-container .mountain-sm {
    display: inline;
    order: 2;
    max-width: 30em;
    position: absolute;
    left: 50%;
    bottom: -100vh;
    transform: translate3d(-50%, 0, 1px);
  }

  #top-container h1 {
    font-size: 5rem;
  }

  #top-container .big-letter {
    font-size: 6rem;
  }

  #top-container h2 {
    font-size: 1.2rem;
  }

  #top-container .headings-container {
    margin: 0;
    text-align: center;
    order: 1;
    position: -webkit-sticky;
    position: sticky;
    top: 0.5em;
    transform: translateY(-1px);
    margin-top: 12vh;
    margin-bottom: 20vh;
  }
}

